# rust-playground

./: .gitignore  Cargo.toml  README.md
ai-bots/: Cargo.toml
ai-bots/src/: main.rs
ai-bots/src/openai/: client.rs  message.rs
axum/: Cargo.toml
module-one/: Cargo.toml  main.rs
module-two/: Cargo.toml
module-two/src/: main.rs
