[package]
name = "ai-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.99"
# tokio = { version = "1.29.0", features = ["full"] }
tokio = "1.29.0"
