[package]
name = "ai-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.99"
# tokio = { version = "1.29.0", features = ["full"] }
tokio = "1.29.0"
